--- a/app/src/main/res/layout/activity_level22.xml
+++ b/app/src/main/res/layout/activity_level22.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Level22">
 
     <RadioGroup
         android:id="@+id/button7"
@@ -14,7 +14,6 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="231dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -27,7 +26,7 @@
         android:layout_marginStart="13dp"
         android:layout_marginTop="49dp"
         android:layout_marginBottom="100dp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -44,7 +43,6 @@
         android:layout_height="37dp"
         android:text=""
         android:textSize="30sp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.252"
@@ -57,7 +55,6 @@
         android:layout_width="105dp"
         android:layout_height="37dp"
         android:textSize="30sp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.252"
@@ -69,10 +66,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="124dp"
-        android:text="Пока все просто"
-        android:visibility="invisible"
+        android:layout_marginTop="40dp"
+        android:text="2. Беспорядок"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -84,7 +81,6 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="259dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -98,7 +94,6 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="259dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -112,7 +107,6 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="259dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -126,7 +120,6 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="231dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -140,7 +133,6 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="231dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -154,7 +146,6 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="202dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -168,7 +159,6 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="202dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -182,7 +172,6 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="202dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -196,7 +185,6 @@
         android:layout_marginTop="243dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="176dp"
-        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -210,35 +198,23 @@
         android:layout_marginTop="255dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="154dp"
-        android:visibility="invisible"
+        android:longClickable="false"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
-    <ImageButton
-        android:id="@+id/mainbutton"
-        android:layout_width="400dp"
-        android:layout_height="658dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginBottom="4dp"
-        android:visibility="visible"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/stolv_3_0" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="42dp"
-        android:layout_marginBottom="75dp"
-        android:text="1.Пока все просто"
-        android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/mainbutton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible" />
+    <RadioGroup
+        android:id="@+id/button14"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="261dp"
+        android:layout_marginTop="243dp"
+        android:layout_marginEnd="117dp"
+        android:layout_marginBottom="176dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
