--- a/app/src/main/res/layout/activity_level22.xml
+++ b/app/src/main/res/layout/activity_level22.xml
@@ -23,16 +23,14 @@
         android:id="@+id/imageView"
         android:layout_width="398dp"
         android:layout_height="439dp"
-        android:layout_marginStart="13dp"
-        android:layout_marginTop="49dp"
-        android:layout_marginBottom="100dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="120dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.461"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.524"
         app:srcCompat="@drawable/safe_1"
         tools:srcCompat="@drawable/safe_1"
         tools:visibility="visible" />
@@ -66,10 +64,9 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="42dp"
         android:text="2. Беспорядок"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.121"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
