--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Level22">
+    tools:context=".Level1">
 
     <RadioGroup
         android:id="@+id/button7"
@@ -14,6 +14,7 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="231dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -23,14 +24,16 @@
         android:id="@+id/imageView"
         android:layout_width="398dp"
         android:layout_height="439dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="120dp"
-        android:visibility="visible"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="49dp"
+        android:layout_marginBottom="100dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.461"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.524"
         app:srcCompat="@drawable/safe_1"
         tools:srcCompat="@drawable/safe_1"
         tools:visibility="visible" />
@@ -41,6 +44,7 @@
         android:layout_height="37dp"
         android:text=""
         android:textSize="30sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.252"
@@ -53,6 +57,7 @@
         android:layout_width="105dp"
         android:layout_height="37dp"
         android:textSize="30sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.252"
@@ -64,9 +69,10 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="42dp"
-        android:text="2. Беспорядок"
+        android:layout_marginTop="30dp"
+        android:text="Пока все просто"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,6 +84,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="259dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -91,6 +98,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="259dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -104,6 +112,7 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="259dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -117,6 +126,7 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="231dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -130,6 +140,7 @@
         android:layout_marginTop="188dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="231dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -143,6 +154,7 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="176dp"
         android:layout_marginBottom="202dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -156,6 +168,7 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="202dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -169,6 +182,7 @@
         android:layout_marginTop="217dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="202dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -182,6 +196,7 @@
         android:layout_marginTop="243dp"
         android:layout_marginEnd="145dp"
         android:layout_marginBottom="176dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
@@ -195,23 +210,49 @@
         android:layout_marginTop="255dp"
         android:layout_marginEnd="64dp"
         android:layout_marginBottom="154dp"
-        android:longClickable="false"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView" />
 
+    <ImageButton
+        android:id="@+id/mainbutton"
+        android:layout_width="400dp"
+        android:layout_height="658dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginBottom="4dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/stolv_3_0" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="75dp"
+        android:text="1.Пока все просто"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/mainbutton"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
     <RadioGroup
-        android:id="@+id/button14"
+        android:id="@+id/button322"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:layout_marginStart="261dp"
-        android:layout_marginTop="243dp"
+        android:layout_marginTop="298dp"
         android:layout_marginEnd="117dp"
         android:layout_marginBottom="176dp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="@+id/mainbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
