--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -65,17 +65,6 @@
         app:layout_constraintTop_toTopOf="@+id/imageView"
         app:layout_constraintVertical_bias="0.398" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Пока все просто"
-        android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <RadioGroup
         android:id="@+id/button1"
         android:layout_width="20dp"
@@ -225,7 +214,8 @@
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/stolv_3_0" />
+        app:srcCompat="@drawable/stolv_3_0"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView3"
@@ -233,26 +223,10 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
         android:layout_marginTop="42dp"
-        android:layout_marginBottom="75dp"
         android:text="1.Пока все просто"
         android:visibility="visible"
-        app:layout_constraintBottom_toTopOf="@+id/mainbutton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
-
-    <RadioGroup
-        android:id="@+id/button322"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="261dp"
-        android:layout_marginTop="298dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="176dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/mainbutton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
