--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -24,8 +24,8 @@
         android:id="@+id/imageView"
         android:layout_width="398dp"
         android:layout_height="439dp"
-        android:layout_marginStart="13dp"
         android:layout_marginTop="49dp"
+        android:layout_marginEnd="200dp"
         android:layout_marginBottom="100dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,7 +33,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.524"
+        app:layout_constraintVertical_bias="0.3"
         app:srcCompat="@drawable/safe_1"
         tools:srcCompat="@drawable/safe_1"
         tools:visibility="visible" />
@@ -207,13 +207,15 @@
 
     <ImageButton
         android:id="@+id/mainbutton"
-        android:layout_width="390dp"
-        android:layout_height="658dp"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
         android:layout_marginStart="4dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="40dp"
         android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stolv_3_0"
         tools:visibility="visible" />
 
@@ -228,18 +230,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
-
-    <RadioGroup
-        android:id="@+id/button322"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_marginStart="270dp"
-        android:layout_marginTop="243dp"
-        android:layout_marginEnd="117dp"
-        android:layout_marginBottom="340dp"
-        app:layout_constraintBottom_toBottomOf="@+id/mainbutton"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/mainbutton"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
