--- a/app/src/main/res/layout/activity_level1.xml
+++ b/app/src/main/res/layout/activity_level1.xml
@@ -42,15 +42,15 @@
         android:id="@+id/textView"
         android:layout_width="105dp"
         android:layout_height="37dp"
-        android:text=""
         android:textSize="30sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.252"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.562" />
+        app:layout_constraintVertical_bias="0.562"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/textView4"
@@ -193,17 +193,13 @@
 
     <RadioGroup
         android:id="@+id/button4"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="304dp"
-        android:layout_marginTop="255dp"
-        android:layout_marginEnd="64dp"
-        android:layout_marginBottom="154dp"
+        android:layout_width="34dp"
+        android:layout_height="33dp"
+        android:layout_marginEnd="62dp"
+        android:layout_marginBottom="149dp"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintEnd_toEndOf="@+id/imageView" />
 
     <ImageButton
         android:id="@+id/mainbutton"
@@ -215,7 +211,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/stolv_3_0"
-        tools:visibility="visible" />
+        tools:visibility="gone" />
 
     <TextView
         android:id="@+id/textView3"
@@ -228,5 +224,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="visible" />
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="107dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="69dp"
+        android:layout_marginBottom="171dp"
+        android:fontFamily="casual"
+        android:text="ERROR"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textSize="32sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
