--- a/app/src/main/res/layout-land/activity_level1.xml
+++ b/app/src/main/res/layout-land/activity_level1.xml
@@ -217,6 +217,22 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/stolv_3_0"
+        tools:visibility="gone" />
+
+    <TextView
+        android:id="@+id/error"
+        android:layout_width="107dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="70dp"
+        android:layout_marginBottom="168dp"
+        android:fontFamily="casual"
+        android:text="ERROR"
+        android:textColor="#000000"
+        android:textColorHighlight="#000000"
+        android:textSize="32sp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
         tools:visibility="visible" />
 
     <TextView
